AutoPing module created, testing
